changed page style, attempted to add chart.js chart - not working atm

--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,11 @@
     <script src="js/angular-route/angular-route.js"></script>
     <script src="js/jquery/dist/jquery.min.js"></script>
     <script src="js/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/Chart.js/Chart.min.js"></script>
+    <script src="js/angular-chart.js/dist/angular-chart.min.js"></script>
     <script src="app.js"></script>
     <script src="controller/controller.js"></script>
+    <link rel="stylesheet" href="js/angular-chart.js/dist/angular-chart.css" />
     <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css" >
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <meta charset="UTF-8">
