--- a/front/index.html
+++ b/front/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="rsApp">
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=9">
     <script src="js/angular/angular.js"></script>
     <script src="js/angular-route/angular-route.js"></script>
     <script src="js/jquery/dist/jquery.min.js"></script>
@@ -17,6 +18,9 @@
 </head>
 
 <body>
-    <div ng-view></div>
+    <div ng-controller="MainCtrl">
+        <div ng-include="'views/homeView.html'"></div>
+        <div ng-view></div>
+    </div>
 </body>
 </html>
