added error-checking to, included notFound result

--- a/front/index.html
+++ b/front/index.html
@@ -1,3 +1,4 @@
+<!-- rsApp Grand Exchange Interface - written by: Brett Korp - github.com/veleroth -->
 <!DOCTYPE html>
 <html ng-app="rsApp">
 <head>
